--- a/style.css
+++ b/style.css
@@ -2,10 +2,33 @@ html {
 
 }
 
+header {
+    margin-bottom: 10px;
+}
+
+input {
+    width: 100%;
+    border-radius: 50px;
+}
+
+button {
+    width: 140px;
+    margin-top: 8px;
+    float: right;
+    box-shadow: black;
+}
+
 .col-3, .col-6, .col-7, .col-9 {
    border: 1px solid black;
 }
 
+#input_search, #header_menu_nav{
+    margin-top: 15px;
+}
+
 #image_start_banner {
-    object-fit: cover;
+}
+
+#content_bot_row {
+    margin-top: 20px;
 }
